# Posets

./: .gitignore  README.md  __init__.py  built_ins.py  hasseDiagram.py  makefile  poly.py  posets.py  posets_test.py  pyproject.toml  snowman.py  todo  utils.py
docs/: bib.bib  doc_funcs.py  posets.sty
src/: hot_hasse.py
src/posets/: __init__.py  examples.py  hasseDiagram.py  polynomial.py  poset.py  utils.py
tests/: convertPosets.m2  hot_hasse_test.py  posets_test.py
