[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posets"
version = "0.0.1"
authors = [{name="William Gustafson", email="williamlgustafson@gmail.com"}]
description="A package for working with finite partial orders"
readme="README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	]
keywords = ["posets", "partial orders", "cd-index", "ab-index", "partially ordered", "lattices", "partially ordered sets", "order complex", "Hasse", "Hasse diagram"]
dependencies =[
	"decorator"
	] 
[project.optional-dependencies]
mats =["numpy"]
[project.urls]
Homepage = "https://github.com/WilliamGustafson/posets"

